Initial Commit of boltnetwork

--- a/PizzaPlanet/views/index.html
+++ b/PizzaPlanet/views/index.html
@@ -36,4 +36,4 @@
 	<script type="text/javascript" src="../app/services/CartService.js"></script>
 	<script type="text/javascript" src="../assets/js/ngDialog.min.js"></script>
 </body>
-</html
+</html>
